tdf#89119: SVG - accelerated import of huge paths without fill

the sample attached to the bug can be rendered within seconds instead of minutes

Change-Id: I64671e9619f78931da2c11461a6884f2a1c8d66f
Reviewed-on: https://gerrit.libreoffice.org/14883
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Christina Roßmanith <ChrRossmanith@web.de>